# 1519

./: README.md
.github/: dependabot.yaml
.github/workflows/: deploy.yaml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
backend/alembic/: env.py
backend/alembic/versions/: _2025_11_09_19_54_initial_migration.py  _2025_11_09_20_13_change_timewindow_limits_to_datetimes.py  fake_initial_migration.sql
backend/scripts/: fake_initial_migration.py
backend/src/: admin.py  app.py  applicant.py  config_schema.py  models.py  patron.py  prepare.py  schemas.py  telegram.py
backend/src/api/: app.py  forms.py  lifespan.py
backend/src/api/routes/: __init__.py  admin.py  applicant.py  auth.py  files.py  patron.py
backend/src/db/: __init__.py
backend/src/db/models/: __init__.py  applicant.py  patron.py  rating.py  statistics.py  timewindow.py  types.py
backend/src/dependencies/: __init__.py  auth.py  db_session.py  timewindow.py
backend/src/schemas/: __init__.py  admin.py  applicant.py  patron.py  rating.py  statistics.py  timewindow.py
deploy/: docker-compose.yaml  nginx-server.conf
frontend/: .cta.json  .env.example  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  bun.lockb  index.html  next.config.ts  nginx-server.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend-next/: .prettierignore  bun.lockb  docker-compose.yaml  next.config.ts  nginx-server.conf  openapi.json
frontend-next/src/: middleware.ts
frontend/frontend-next/: bun.lockb  package.json
(+77 files in other folders)
