[project]
name = "stipend-1519"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.21.0",
    "colorlog>=6.9.0",
    "fastapi-derive-responses>=0.1.3",
    "fastapi-swagger>=0.2.6",
    "fastapi[standard]>=0.115.8",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs==2.2.3.250527",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "xlsxwriter>=3.2.2",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
