[project]
name = "stipend-1519"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "colorlog>=6.10.1",
    "fastapi-derive-responses>=0.1.7",
    "fastapi-swagger>=0.4.46",
    "fastapi[standard]>=0.135.3",
    "gunicorn>=25.3.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandas-stubs==3.0.0.260204",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "xlsxwriter>=3.2.9",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
